--- a/_src/pug/blocks/header.pug
+++ b/_src/pug/blocks/header.pug
@@ -1,4 +1,16 @@
 //header
-
 header.header
+    .container
+        a(href='#').header__logo СнабТехДеталь
+        a(href='#').header__button Узнать цену
+        ul.header__menu
+            li <a href="#">Каталог</a>
+            li <a href="#">Доставка</a>
+            li <a href="#">FAQ</a>
+            li <a href="#">О нас</a>
+        .header__info
+            .header__info__phone 8 (800) 100-1000
+            .header__info__mail
+                div e-mail:
+                div info@snab-td.ru
 
