--- a/_src/css/common.less
+++ b/_src/css/common.less
@@ -9,9 +9,10 @@ html {
   font-size: 100.01%;
 }
 body {
-  font: 14px/1.41 'Arial', sans-serif;
+  font: 14px/1.41 'Roboto', sans-serif;
   width: 100%;
   height: 100%;
+  background: #d5d5d5;
 }
 iframe {
   border: 0 none;
@@ -24,8 +25,9 @@ ul {
   list-style: none inside none;
 }
 .container {
-  width: 1000px;
+  max-width: 1260px;
   margin: 0 auto;
+  position: relative;
 }
 .wrapper {
   position: relative;
@@ -33,7 +35,7 @@ ul {
   height: auto !important;
   height: 100%;
   overflow: hidden;
-  min-width: 1000px;
+  min-width: 320px;
   z-index: 10;
 }
 .hidden, .ninja {
@@ -45,14 +47,9 @@ ul {
   height: 0;
   overflow: hidden;
 }
-//Прижимаем футер
-.empty {
-  height: 100px;
-  position: relative;
-}
-footer {
-  margin-top: -100px;
-}
 canvas {
   display: block;
+}
+.maincontent {
+  .clearfix();
 }
