--- a/_src/pug/blocks/head.pug
+++ b/_src/pug/blocks/head.pug
@@ -5,5 +5,6 @@ head
     meta(name="description" content="")
     meta(name="keywords" content="")
     meta(name="viewport" content="width=device-width")
+    link(href="https://fonts.googleapis.com/css?family=Roboto&amp;subset=cyrillic" rel="stylesheet")
     link(rel="stylesheet", href="/css/style.css")
     script(src='/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js')
