--- a/_src/css/less/header.less
+++ b/_src/css/less/header.less
@@ -67,6 +67,7 @@
   transform: translateX(-50%);
   border-radius: 5px;
   background: #f78234;
+  text-decoration: none;
 }
 .header__info {
   position: absolute;
@@ -80,4 +81,5 @@
   font-size: 29px;
   line-height: 1;
   margin-bottom: 10px;
+  font-weight: 700;
 }
