--- a/_src/pug/blocks/footer.pug
+++ b/_src/pug/blocks/footer.pug
@@ -1,2 +1,17 @@
 //footer
-footer(role="contentinfo")
+footer(role="contentinfo").footer
+    .container
+        ul.footer__menu
+            li <a href="#">Подшипники</a>
+            li <a href="#">Звёзды</a>
+            li <a href="#">Шкивы</a>
+            li <a href="#">Резинотехнические изделия</a>
+            li <a href="#">Втулки и ступицы</a>
+            li <a href="#">Цепи</a>
+        .footer__info
+            .footer__info__title Контактная информация:
+            div 8 (800) 100 1000
+            div 8 (953) 123-4567
+            div info@snab-td.ru
+        .footer__rights ООО «СнабТехДеталь» – производство и поставка подшипников.
+
