--- a/_src/pug/layouts/layout.pug
+++ b/_src/pug/layouts/layout.pug
@@ -14,7 +14,8 @@ html
             include ../blocks/header.pug
 
             div.maincontent
-                block content
+                .container
+                    block content
             .empty
 
         include ../blocks/footer.pug
