--- a/_src/css/common.less
+++ b/_src/css/common.less
@@ -12,7 +12,7 @@ body {
   font: 14px/1.41 'Roboto', sans-serif;
   width: 100%;
   height: 100%;
-  background: #d5d5d5;
+  background: #d5d5d5 url("/img/main/bg_pattern.png") repeat 0 0;
 }
 iframe {
   border: 0 none;
@@ -51,5 +51,7 @@ canvas {
   display: block;
 }
 .maincontent {
-  .clearfix();
+  .container {
+    .clearfix();
+  }
 }
