--- a/_src/css/less/header.less
+++ b/_src/css/less/header.less
@@ -36,11 +36,17 @@
   left: 298px;
   top: 0;
   .size(650,40);
+  font-weight: 700;
   & > li {
     position: relative;
   }
   a {
     color: #FFFFFF;
+    text-decoration: none;
+    transition: all 100ms ease-in;
+    &:hover {
+      color: #f78234;
+    }
   }
   &:before {
     content: '';
