--- a/_src/pug/pages/main.pug
+++ b/_src/pug/pages/main.pug
@@ -5,3 +5,49 @@ block config
 
 block content
     section.slider
+    section.menu
+        .menu__heading Наша компания производит
+        .menu__list
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/shkiv.png')
+                .menu__item__title <span>Шкивы</span>
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/podship.png')
+                .menu__item__title <span>Подшипники</span>
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/zcep.png')
+                .menu__item__title <span>Цепи</span>
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/vtulki.png')
+                .menu__item__title <span>Втулки и ступицы</span>
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/zvezdy.png')
+                .menu__item__title <span>Звёзды</span>
+            a(href="#").menu__item
+                .menu__item__pic
+                    img(src='/img/main/rti.png')
+                .menu__item__title <span>РТИ</span>
+
+    section.main
+        .main__headline «СнабТехДеталь» – производство и поставка подшипников
+        .main__content
+            p Доверие заказчика – цель нашей работы!
+            p Деятельность компании «Меридиан» направлена на потребительский рынок Тулы, Тульской области и различных регионов России в сегменте реализации <b>подшипников собственного производства</b>.
+            p Работа <strong>сервиса компании</strong> разработана с целью предоставления максимально удобного режима с потенциальными покупателями, и имеет ряд приоритетных факторов в организации своей основной деятельности:
+            ul
+                li посредством консультации в индивидуальном общении, представители компании предоставят полный информационный блок по всем интересующим Вас вопросам, помогут <a href="#">купить подшипники</a> по всем заданным параметрам;
+                li для постоянных клиентов работает гибкая система скидок;
+                li отгрузка товара осуществляется в день заказа;
+                li товар доставляется без нарушения сроков поставки собственным транспортом компании;
+                li ценовая политика рассчитана на любой потребительский бюджет;
+                li спектр реализуемой продукции.
+            p Помимо качественных подшипников в Туле, компания «Меридиан» предлагает по доступным ценам товары следующей категории:
+            p Асбестотехнические изделия, используемые как теплоизоляционный материал.
+            p Резинотехнические изделия, которые широко применяются во всех отраслях промышленности.
+            p Полимерная продукция, пластики, стекломатериалы. Изделия от компании «СнабТехДеталь» имеют низкую цену и широко востребованы в Туле и регионах России.
+
