--- a/_src/css/less/main.less
+++ b/_src/css/less/main.less
@@ -5,22 +5,22 @@
   background: url("/img/slider/1.png") no-repeat center;
   background-size: cover;
 }
-.menu {
+.product {
   margin-bottom: 45px;
 }
-.menu__heading {
+.product__heading {
   color: #333333;
   font-size: 24px;
   line-height: 1;
   padding: 25px 0;
   text-align: center;
 }
-.menu__list {
+.product__list {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
-.menu__item {
+.product__item {
   display: block;
   background: #f78234;
   width: 16%;
@@ -31,7 +31,7 @@
     box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.40);
   }
 }
-.menu__item__pic {
+.product__item__pic {
   height: 250px;
   background: #FFFFFF no-repeat center;
   background-size: contain;
@@ -47,7 +47,7 @@
     .size(0,100%);
   }
 }
-.menu__item__title {
+.product__item__title {
   height: 60px;
   text-align: center;
   color: #FFFFFF;
