--- a/_src/pug/pages/main.pug
+++ b/_src/pug/pages/main.pug
@@ -5,33 +5,33 @@ block config
 
 block content
     section.slider
-    section.menu
-        .menu__heading Наша компания производит
-        .menu__list
-            a(href="#").menu__item
-                .menu__item__pic
+    section.product
+        .product__heading Наша компания производит
+        .product__list
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/shkiv.png')
-                .menu__item__title <span>Шкивы</span>
-            a(href="#").menu__item
-                .menu__item__pic
+                .product__item__title <span>Шкивы</span>
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/podship.png')
-                .menu__item__title <span>Подшипники</span>
-            a(href="#").menu__item
-                .menu__item__pic
+                .product__item__title <span>Подшипники</span>
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/zcep.png')
-                .menu__item__title <span>Цепи</span>
-            a(href="#").menu__item
-                .menu__item__pic
+                .product__item__title <span>Цепи</span>
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/vtulki.png')
-                .menu__item__title <span>Втулки и ступицы</span>
-            a(href="#").menu__item
-                .menu__item__pic
+                .product__item__title <span>Втулки и ступицы</span>
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/zvezdy.png')
-                .menu__item__title <span>Звёзды</span>
-            a(href="#").menu__item
-                .menu__item__pic
+                .product__item__title <span>Звёзды</span>
+            a(href="#").product__item
+                .product__item__pic
                     img(src='/img/main/rti.png')
-                .menu__item__title <span>РТИ</span>
+                .product__item__title <span>РТИ</span>
 
     section.main
         .main__headline «СнабТехДеталь» – производство и поставка подшипников
