--- a/_src/pug/pages/main.pug
+++ b/_src/pug/pages/main.pug
@@ -33,7 +33,7 @@ block content
                     img(src='/img/main/rti.png')
                 .product__item__title <span>РТИ</span>
 
-    section.main
+    main.main
         .main__headline «СнабТехДеталь» – производство и поставка подшипников
         .main__content
             p Доверие заказчика – цель нашей работы!
