--- a/_src/pug/pages/main.pug
+++ b/_src/pug/pages/main.pug
@@ -34,7 +34,7 @@ block content
                 .product__item__title <span>РТИ</span>
 
     main.main
-        .main__headline «СнабТехДеталь» – производство и поставка подшипников
+        .headline «СнабТехДеталь» – производство и поставка подшипников
         .main__content
             p Доверие заказчика – цель нашей работы!
             p Деятельность компании «Меридиан» направлена на потребительский рынок Тулы, Тульской области и различных регионов России в сегменте реализации <b>подшипников собственного производства</b>.
