--- a/_src/css/less/main.less
+++ b/_src/css/less/main.less
@@ -4,9 +4,15 @@
   height: 355px;
   background: url("/img/slider/1.png") no-repeat center;
   background-size: cover;
+  .media(576px, {
+    display: none;
+  });
 }
 .product {
   margin-bottom: 45px;
+  .media(900px, {
+    margin-bottom: 20px;
+  });
 }
 .product__heading {
   color: #333333;
@@ -27,9 +33,18 @@
   transition: transform 100ms ease-in;
   transform: scale(1);
   &:hover {
-    transform: scale(1.05);
+    position: relative;
+    z-index: 10;
+    transform: scale(1.03);
     box-shadow: 0 1px 3px 1px rgba(0, 0, 0, 0.40);
   }
+  .media(900px, {
+    width: 33%;
+    margin-bottom: 5px;
+  });
+  .media(576px, {
+    width: 49%;
+  });
 }
 .product__item__pic {
   height: 250px;
@@ -39,13 +54,19 @@
   img {
     .inlineblock(middle);
     max-width: 100%;
-    max-height: 100%;
+    max-height: 80%;
   }
   &:before {
     content: '';
     .inlineblock(middle);
     .size(0,100%);
   }
+  .media(900px, {
+    height: 200px;
+  });
+  .media(576px, {
+    height: 150px;
+  });
 }
 .product__item__title {
   height: 60px;
@@ -75,10 +96,13 @@
   color: #FFFFFF;
   font-size: 24px;
   line-height: 1;
-  padding: 20px 20px;
+  padding: 20px;
   &-text_left {
     text-align: left;
   }
+  .media(576px, {
+    padding: 10px;
+  });
 }
 .main__content {
   padding: 35px 30px;
@@ -107,6 +131,15 @@
       }
     }
   }
+  .media(576px, {
+    padding: 15px 10px;
+    p {
+      margin-bottom: 15px;
+    }
+    ul>li {
+      margin-bottom: 15px;
+    }
+  });
 }
 .page {
   padding-top: 30px;
@@ -116,13 +149,17 @@
   width: 300px;
   background: #FFFFFF;
   float: left;
+  .media(900px, {
+    display: none;
+  });
 }
 .page__main {
   margin-left: 315px;
+  .media(900px, {
+    margin-left: 0;
+  });
 }
-.aside {
 
-}
 .aside__menu {
   font-size: 16px;
   padding-top: 15px;
