--- a/_src/pug/blocks/footer.pug
+++ b/_src/pug/blocks/footer.pug
@@ -1,13 +1,14 @@
 //footer
 footer(role="contentinfo").footer
     .container
-        ul.footer__menu
-            li <a href="#">Подшипники</a>
-            li <a href="#">Звёзды</a>
-            li <a href="#">Шкивы</a>
-            li <a href="#">Резинотехнические изделия</a>
-            li <a href="#">Втулки и ступицы</a>
-            li <a href="#">Цепи</a>
+        .footer__menu
+            ul
+                li <a href="#">Подшипники</a>
+                li <a href="#">Звёзды</a>
+                li <a href="#">Шкивы</a>
+                li <a href="#">Резинотехнические изделия</a>
+                li <a href="#">Втулки и ступицы</a>
+                li <a href="#">Цепи</a>
         .footer__info
             .footer__info__title Контактная информация:
             div 8 (800) 100 1000
