--- a/_src/pug/pages/page.pug
+++ b/_src/pug/pages/page.pug
@@ -8,21 +8,22 @@ block content
         .page__aside
             aside.aside
                 .headline.headline-text_left Наша продукция
-                ul.aside__menu
-                    li
-                        a(href="#") Подшипники
-                        ul
-                            li <a href="#">Подшипники качения</a>
-                            li <a href="#">Роликовые подшипники</a>
-                            li <a href="#">Шариковые подшипники </a>
-                            li <a href="#">Упорные подшипники</a>
-                    li
-                        a(href="#") Подшипники
-                        ul
-                            li <a href="#">Подшипники качения</a>
-                            li <a href="#">Роликовые подшипники</a>
-                            li <a href="#">Шариковые подшипники </a>
-                            li <a href="#">Упорные подшипники</a>
+                .aside__menu
+                    ul
+                        li
+                            a(href="#") Подшипники
+                            ul
+                                li <a href="#">Подшипники качения</a>
+                                li <a href="#">Роликовые подшипники</a>
+                                li <a href="#">Шариковые подшипники </a>
+                                li <a href="#">Упорные подшипники</a>
+                        li
+                            a(href="#") Подшипники
+                            ul
+                                li <a href="#">Подшипники качения</a>
+                                li <a href="#">Роликовые подшипники</a>
+                                li <a href="#">Шариковые подшипники </a>
+                                li <a href="#">Упорные подшипники</a>
 
 
         .page__main
