--- a/_src/css/less/main.less
+++ b/_src/css/less/main.less
@@ -163,7 +163,7 @@
 .aside__menu {
   font-size: 16px;
   padding-top: 15px;
-  & > li {
+  & > ul > li {
     & > a {
       display: block;
       color: #FFFFFF;
