--- a/_src/pug/blocks/header.pug
+++ b/_src/pug/blocks/header.pug
@@ -4,11 +4,12 @@ header.header
         a(href='#').header__logo СнабТехДеталь
         a(href='#').header__button Узнать цену
 
-        ul.header__menu
-            li <a href="#">Каталог</a>
-            li <a href="#">Доставка</a>
-            li <a href="#">FAQ</a>
-            li <a href="#">О нас</a>
+        .header__menu
+            ul
+                li <a href="#">Каталог</a>
+                li <a href="#">Доставка</a>
+                li <a href="#">FAQ</a>
+                li <a href="#">О нас</a>
 
         .header__info
             .header__burger
