--- a/_src/pug/blocks/header.pug
+++ b/_src/pug/blocks/header.pug
@@ -11,6 +11,20 @@ header.header
                 li <a href="#">FAQ</a>
                 li <a href="#">О нас</a>
 
+        .mobile_menu
+            .mobile_menu__cross
+            .mobile_menu__list
+                ul
+                    li <a href="#">Каталог</a>
+                    li <a href="#">Доставка</a>
+                        ul
+                            li <a href="#">Каталог</a>
+                            li <a href="#">Доставка</a>
+                            li <a href="#">FAQ</a>
+                            li <a href="#">О нас</a>
+                    li <a href="#">FAQ</a>
+                    li <a href="#">О нас</a>
+
         .header__info
             .header__burger
                 .header__burger__icon
