img reset, paths

--- a/_src/css/common.less
+++ b/_src/css/common.less
@@ -24,6 +24,12 @@ table {
 ul {
   list-style: none inside none;
 }
+img{
+  height: auto;
+  /* Make sure images are scaled correctly. */
+  max-width: 100%;
+  /* Adhere to container width. */
+}
 .container {
   max-width: 1260px;
   margin: 0 auto;
