--- a/_src/css/less/header.less
+++ b/_src/css/less/header.less
@@ -48,11 +48,10 @@
   top: 0;
   .size(650,40);
   font-weight: 700;
-  & > ul {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  & > li {
     position: relative;
   }
   a {
