--- a/_src/pug/pages/page.pug
+++ b/_src/pug/pages/page.pug
@@ -8,26 +8,26 @@ block content
         .page__aside
             aside.aside
                 .headline.headline-text_left Наша продукция
-                .aside__menu
-                    ul
-                        li
-                            a(href="#") Подшипники
-                            ul
-                                li <a href="#">Подшипники качения</a>
-                                li <a href="#">Роликовые подшипники</a>
-                                li <a href="#">Шариковые подшипники </a>
-                                li <a href="#">Упорные подшипники</a>
-                        li
-                            a(href="#") Подшипники
-                            ul
-                                li <a href="#">Подшипники качения</a>
-                                li <a href="#">Роликовые подшипники</a>
-                                li <a href="#">Шариковые подшипники </a>
-                                li <a href="#">Упорные подшипники</a>
+
+                ul.aside__menu
+                    li
+                        a(href="#") Подшипники
+                        ul
+                            li <a href="#">Подшипники качения</a>
+                            li <a href="#">Роликовые подшипники</a>
+                            li <a href="#">Шариковые подшипники </a>
+                            li <a href="#">Упорные подшипники</a>
+                    li
+                        a(href="#") Подшипники
+                        ul
+                            li <a href="#">Подшипники качения</a>
+                            li <a href="#">Роликовые подшипники</a>
+                            li <a href="#">Шариковые подшипники </a>
+                            li <a href="#">Упорные подшипники</a>
 
 
         .page__main
-            main.main.main-bg
+            main.main.main-no_bg
                 .headline.headline-text_left «СнабТехДеталь» – производство и поставка подшипников
                 .main__content
                     p Доверие заказчика – цель нашей работы!
