--- a/_src/css/less/main.less
+++ b/_src/css/less/main.less
@@ -1,9 +1,17 @@
 @import "../mixins";
 
 .slider {
+  font-size: 50px;
+  .media(1260px, {
+    font-size: 25px;
+    font-size: 4vw;
+  });
   .media(576px, {
     display: none;
   });
+  .caption-wrap {
+    background: #141b4f;
+  }
 }
 .product {
   margin-bottom: 45px;
@@ -83,8 +91,8 @@
 }
 .main {
   background: #FFFFFF no-repeat left bottom;
-  &-bg {
-    background-image: url("/img/main/bg_main.png");
+  &-no_bg {
+    background: none;
   }
 }
 .headline {
@@ -139,19 +147,48 @@
   });
 }
 .page {
-  padding-top: 30px;
-  .clearfix();
+  margin-top: 30px;
+  overflow: hidden;
+  position: relative;
+  &:before {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 300px;
+    background: #FFFFFF;
+    .media(900px, {
+      display: none;
+    });
+  }
+  &:after {
+    content: '';
+    position: absolute;
+    left: 315px;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    background: #FFFFFF url("/img/main/bg_main.png") no-repeat bottom left;
+    .media(900px, {
+      left: 0;
+    });
+  }
 }
 .page__aside {
   width: 300px;
   background: #FFFFFF;
   float: left;
+  position: relative;
+  z-index: 10;
   .media(900px, {
     display: none;
   });
 }
 .page__main {
   margin-left: 315px;
+  position: relative;
+  z-index: 10;
   .media(900px, {
     margin-left: 0;
   });
@@ -160,7 +197,8 @@
 .aside__menu {
   font-size: 16px;
   padding-top: 15px;
-  & > ul > li {
+  & > li {
+    margin-bottom: 5px;
     & > a {
       display: block;
       color: #FFFFFF;
