--- a/_src/pug/blocks/header.pug
+++ b/_src/pug/blocks/header.pug
@@ -4,26 +4,25 @@ header.header
         a(href='#').header__logo СнабТехДеталь
         a(href='#').header__button Узнать цену
 
-        .header__menu
-            ul
-                li <a href="#">Каталог</a>
-                li <a href="#">Доставка</a>
-                li <a href="#">FAQ</a>
-                li <a href="#">О нас</a>
+
+        ul.header__menu
+            li <a href="#">Каталог</a>
+            li <a href="#">Доставка</a>
+            li <a href="#">FAQ</a>
+            li <a href="#">О нас</a>
 
         .mobile_menu
             .mobile_menu__cross
-            .mobile_menu__list
-                ul
-                    li <a href="#">Каталог</a>
-                    li <a href="#">Доставка</a>
-                        ul
-                            li <a href="#">Каталог</a>
-                            li <a href="#">Доставка</a>
-                            li <a href="#">FAQ</a>
-                            li <a href="#">О нас</a>
-                    li <a href="#">FAQ</a>
-                    li <a href="#">О нас</a>
+            ul.mobile_menu__list
+                li <a href="#">Каталог</a>
+                li <a href="#">Доставка</a>
+                    ul
+                        li <a href="#">Каталог</a>
+                        li <a href="#">Доставка</a>
+                        li <a href="#">FAQ</a>
+                        li <a href="#">О нас</a>
+                li <a href="#">FAQ</a>
+                li <a href="#">О нас</a>
 
         .header__info
             .header__burger
