--- a/_src/css/less/mobileMenu.less
+++ b/_src/css/less/mobileMenu.less
@@ -13,7 +13,7 @@
   display: none;
 }
 .mobile_menu__list {
-  padding-top: 50px;
+  padding: 50px 0;
   font-size: 18px;
   line-height: 1;
   & > li {
@@ -63,6 +63,7 @@
 .openedMenu {
   position: relative;
   overflow: hidden;
+  width: auto;
   .mobile_menu {
     display: block;
   }
