menu. footer counter

--- a/_src/css/less/footer.less
+++ b/_src/css/less/footer.less
@@ -45,6 +45,7 @@
   left: 25px;
   bottom: 15px;
   color: #FFFFFF;
+  right: 60px;
   .media(576px, {
     position: static;
   });
@@ -60,5 +61,15 @@
   .media(576px, {
     position: static;
     margin-bottom: 15px;
+  });
+}
+.footer__counter {
+  position: absolute;
+  right: 25px;
+  bottom: 15px;
+  .media(576px, {
+    position: static;
+    display: block;
+    margin-top: 15px;
   });
 }
