--- a/_src/pug/pages/main.pug
+++ b/_src/pug/pages/main.pug
@@ -19,12 +19,12 @@ block content
             a(href="#").product__item
                 .product__item__pic
                     img(src='/img/main/zcep.png')
-                .product__item__title <span>Цепи и звёзды</span>
-            //-a(href="#").product__item
+                .product__item__title <span>Цепи</span>
+            a(href="#").product__item
                 .product__item__pic
                     img(src='/img/main/vtulki.png')
                 .product__item__title <span>Втулки и ступицы</span>
-            //-a(href="#").product__item
+            a(href="#").product__item
                 .product__item__pic
                     img(src='/img/main/zvezdy.png')
                 .product__item__title <span>Звёзды</span>
